# 0xtools

./: .versionrc.json  ARCHITECTURE.md  Claude.md  README.md  install  package.json  webpack.config.js
.github/: CONTRIBUTING.md
.github/workflows/: build-and-release.yml  build-extension.yml  build-runner.yml  pr-validation.yml  release.yml
docs/: BUILDING.md  CONTRIBUTING.md  EXTENSION_GUIDE.md  INLINE-GAS-ANNOTATIONS.md  README.md
runner/: Cargo.toml
runner/data/: signatures.json
runner/src/: abi_decode.rs  call_graph.rs  cfg.rs  fuzzer.rs  main.rs  signature_db.rs  storage_layout.rs  types.rs
src/__tests__/integration/: realtime.integration.test.ts
src/cli/: index.ts
src/core/: cache.ts  exporter.ts  parser.ts  scanner.ts  watcher.ts
src/extension/: extension.ts  manager.ts
src/extension/providers/: dashboard.ts  notebook-provider.ts  playground.ts
src/features/: SolcManager.ts  address-inspector.ts  analysis-engine.ts  anvil-manager.ts  call-graph.ts  cast-integration.ts  chain-explorer.ts  compilation-service.ts  complexity.ts  contract-flattener.ts  deployment.ts  event-decoder.ts  forge-backend.ts  forge-script-runner.ts  forge-test-runner.ts  fork-simulator.ts  four-byte-lookup.ts  gas-decorations.ts  gas-optimizer.ts  gas-pricing.ts  gas.ts  hardhat-integration.ts  invariant-detector.ts  mythril-integration.ts  profiler.ts  rpc-provider.ts  runner-backend.ts  size.ts  slither-integration.ts  snippet-provider.ts  storage-layout.ts  tenderly-integration.ts  tx-inspector.ts  upgrade-analyzer.ts  verify.ts
src/utils/: logger.ts
(+27 files in other folders)
